# Orphan

./: .gitignore  CMakeLists.txt
.github/workflows/: cpp.yml
src/: Orphan.cpp  Orphan.hpp  orphan.cpp  orphan.hpp
tests/: OrphanTests.cpp  orphanTests.cpp
